apps/grafana/virtual-service/ihc-dt2/grafana-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: grafana
  name: grafana-vs
  namespace: grafana
spec:
  gateways:
  - components/component-gateway
  hosts:
  - grafana.ihc-dt2.cluster-3.de
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kube-prometheus-stack-grafana.grafana.svc.cluster.local
        port:
          number: 80
